--- a/home.css
+++ b/home.css
@@ -9,8 +9,19 @@ body {
     justify-content: flex-end;
     align-items:center;
     background-color: #333;
-    padding: 1rem;
+    padding: 0.5rem;
 }
+.navbar .logo {
+    margin-right: auto;
+    display: flex;
+    align-items: center;
+}
+.navbar .logo img {
+    max-height: 50px; /* Ajusta la altura máxima del logo */
+    width: auto; /* Mantén la proporción del logo */
+ /* Espacio entre el logo y los enlaces de navegación */
+}
+
 .navbar a {
     color: white;
     text-decoration: none;
@@ -68,6 +79,7 @@ margin-right: auto;
     position: relative;
     display: flex;
     overflow: hidden;
+    height: 90vh;
 }
 
 .accordion-item {
@@ -112,8 +124,144 @@ margin-right: auto;
 
 .accordion-control.prev {
     left: 0;
+    border-radius: 50px;
 }
 
 .accordion-control.next {
     right: 0;
+    border-radius: 50px;
+}
+/*final estilos slider de imagenes */
+.brands-container{
+    background-color: #333;
+    padding: 1rem 0;
+}
+.brands-container h2 {
+    color: white;
+    text-align:center;
+    margin-bottom: 1rem;
+}
+.brands-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    padding: 1rem 0;
+}
+
+.brands-row img {
+    width: 16%;
+    height: auto;
+    transition: filter 0.3s ease;
+}
+/*final estilos brands */
+
+.category{
+    background-color: #333;
+    padding: 1rem 0;
+}
+.categories-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    padding: 1rem 0;
+    background-color: #333;
+}
+.category h2 {
+    color: #ffffff;
+    text-align: center;
+    margin-right:1rem;
+    padding: 1rem 0;
+}
+
+.categories-row img {
+    width: 90%;
+    height: auto;
+    transition: filter 0.3s ease;
+}
+.categories-row {
+    color:white ;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr ;
+    gap: 20px 20px;
+    grid-auto-flow: row;
+    margin:1rem 6rem;
+}
+.categories-row div:nth-child(1) {
+    grid-area: 1 / 1 / 2 / 2;
+}
+.categories-row div:nth-child(2) {
+    grid-area: 1 / 2 / 2 / 3;
+}
+.categories-row div:nth-child(3) {
+    grid-area: 1 / 3 / 2 / 4;
+}
+.categories-row div:nth-child(4) {
+    grid-area: 1 / 5 / 2 / 6;
+}
+.categories-row div:nth-child(5) {
+    grid-area: 2 / 1 / 3 / 2;
+}
+.categories-row div:nth-child(6) {
+    grid-area: 1 / 4 / 2 / 5;
+}
+.categories-row div:hover {
+    transform: scale(1.025);
+}
+/*final estilos categoria */
+.popular-products{
+    background-color: #333;
+    padding: 1rem 0;
+}
+
+.popular-products h2 {
+    color: white;
+    text-align: center;
+    padding: 1rem 0;
+}
+
+.products-row {
+    color:white ;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    gap: 20px 20px;
+    margin:1rem 6rem;
+  }
+  
+  .products-row div:nth-child(1) {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  
+  .products-row div:nth-child(2) {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+  
+  .products-row div:nth-child(3) {
+    grid-area: 1 / 3 / 2 / 4;
+  }
+  
+  .products-row div:nth-child(4) {
+    grid-area: 1 / 4 / 2 / 5;
+  }
+  
+  .products-row div img {
+    width: 100%;
+    height: auto;
+    transition: transform 0.3s ease;
+  }
+  
+  .products-row div:hover img {
+    transform: scale(1.05);
+  }
+  
+  footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 1rem 0;
 }
